# emile

./: .travis.yml  Changelog.md  LICENSE  README.md  emile.cabal
src/: Names.hs
src/Language/: CoreLang.hs
src/Language/Common/: Label.hs
src/Language/Example/: MiniCore.hs  MiniMod.hs
src/Language/Example/MiniCore/: Context.hs  Desugar.hs  Desugar.hs-boot  Equiv.hs  EquivKind.hs  Errors.hs  Syntax.hs  Syntax.hs-boot  Whnf.hs
src/Language/OIL/: Elaborate.hs  Syntax.hs
src/Language/SIL/: Embed.hs  Syntax.hs
