name:                emile
version:             0.1
synopsis:            Extensible ML for Interesting Experiments
description:         Extensible ML for Interesting Experiments
homepage:            https://github.com/lambdageek/emile
license:             BSD2
license-file:        LICENSE
author:              Aleksey Kliger
maintainer:          aleksey at lambdageek dot org
category:            Language
build-type:          Simple
extra-source-files:  README.md,
                     Changelog.md
cabal-version:       >=1.10
tested-with:         GHC == 7.8.4, GHC == 7.10.2

library
  exposed-modules:     Language.CoreLang,
                       Language.OIL.Syntax,
                       Language.SIL.Syntax,
                       Language.SIL.Embed,
                       Language.OIL.Elaborate,
                       Language.Example.MiniCore
  other-modules:       Names
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.9
                     , containers >= 0.5
                     , mtl >= 2.2.0.1
                     , trifecta >= 1.5
                     , unbound-generics >= 0.2
  hs-source-dirs:      src
  default-extensions:  MultiParamTypeClasses, FlexibleContexts, FlexibleInstances, DeriveGeneric
  default-language:    Haskell2010

source-repository head
  type: git
  location: git://github.com/lambdageek/emile.git

